--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   http: ^0.12.0
   flutter_facebook_login: ^2.0.1
   dio: 2.1.16
+  modal_progress_hud: ^0.1.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
