--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   catcher: ^0.0.8
   date_utils: ^0.1.0+2
   simple_gesture_detector: ^0.1.3
+  auto_size_text: ^2.1.0
 
 
 dev_dependencies:
@@ -69,6 +70,13 @@ flutter:
     - assets/splash-01.png
     - assets/logo_login.jpg
     - assets/login_facebook.png
+    - assets/historial_clinico.png
+    - assets/historial_clinico_activo.png
+    - assets/home.png
+    - assets/home_activo.png
+    - assets/mis_citas.png
+    - assets/mis_citas_activo.png
+    - assets/recetas_activo.png
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
