--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,8 @@ flutter:
     - assets/mis_citas.png
     - assets/mis_citas_activo.png
     - assets/recetas_activo.png
+    - assets/agendar.png
+    - assets/logo_white.png
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
