--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   webview_flutter: ^0.3.15+1
   flutter_launcher_icons: "^0.7.3"
   smooth_star_rating: 1.0.3
-
+  #android_alarm_manager: ^0.4.4+3
 
 
 dev_dependencies:
@@ -93,6 +93,7 @@ flutter:
     - assets/clinica.png
     - assets/reloj.png
     - assets/reloj_disponible.png
+    - assets/logoclinica.png
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
