--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   dio: 2.1.16
   modal_progress_hud: ^0.1.3
   webfeed: ^0.4.2
+  font_awesome_flutter: ^8.5.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
