--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,13 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.clinicaesteticadental.flutter_app">
-    <uses-permission android:name="android.permission.INTERNET"/>
-<<<<<<< HEAD
+    <uses-permission android:name="android.permission.INTERNET"/>//listo dale
     <!--<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>-->
-=======
+    <uses-permission android:name="android.permission.WAKE_LOCK"/> en el mio no esta-->
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.VIBRATE" />
->>>>>>> 935cade5966235b75ed7c73f0c01f405a4c687e4
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
          In most cases you can leave this as-is, but you if you want to provide
@@ -17,7 +14,6 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="Clínica Dental"
         android:icon="@mipmap/ic_launcher">
-<<<<<<< HEAD
         <!--<service
             android:name="io.flutter.plugins.androidalarmmanager.AlarmService"
             android:permission="android.permission.BIND_JOB_SERVICE"
@@ -32,14 +28,12 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED"></action>
             </intent-filter>
         </receiver>/-->
-=======
         <receiver android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationReceiver" />
         <receiver android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationBootReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"></action>
             </intent-filter>
         </receiver>
->>>>>>> 935cade5966235b75ed7c73f0c01f405a4c687e4
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
