--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   modal_progress_hud: ^0.1.3
   webfeed: ^0.4.2
   font_awesome_flutter: ^8.5.0
+  wc_flutter_share: ^0.1.1
+  network_image_to_byte: ^0.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
