[finishes #170565536] Agregando secciones como detalle y diagnostico para diferentes escenarios

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -101,6 +101,7 @@ flutter:
     - assets/reloj_disponible.png
     - assets/logoclinica.png
     - assets/googlemap.png
+    - assets/diagnostic.png
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
