--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  url_launcher: ^5.1.3
+  html: ^0.14.0+3
   catcher: ^0.0.8
   date_utils: ^0.1.0+2
   simple_gesture_detector: ^0.1.3
@@ -44,7 +46,7 @@ dependencies:
   smooth_star_rating: 1.0.4+2
   flutter_local_notifications:
 
-  url_launcher:
+
   #android_alarm_manager: ^0.4.4+3
 
 
